--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -11,5 +11,5 @@ $clr_backfirst: #f7f7f7;
 $clr_backsecond: #f8f8f8;
 $clr_footer_txt: #8b8b8b;
 $clr_footer_back: #fefaf3;
-$clr_arrow: #9e9b9b;
+$clr_arrow: #b5b0b0;
 $clr_input_border: #e8e8e8;
