--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -1,6 +1,5 @@
 header {
     .static {
-        position: relative;
         @include Flex($d: flex, $a-i: center);
         z-index: 999999;
         background-color: #fff;
@@ -18,7 +17,7 @@ header {
         width: 100%;
         height: 69px;
         bottom: 100%;
-        transition: all 0.5s;
+        transition: all 0.4s linear;
 
         &.active {
             transform: translateY(100%);
@@ -57,7 +56,7 @@ header {
         .search_mob {
             width: 100%;
 
-            @media (min-width:1025px) {
+            @media (min-width:1024px) {
                 display: none;
             }
 
@@ -95,7 +94,7 @@ header {
             .menu {
                 display: none;
 
-                @media (min-width:1025px) {
+                @media (min-width:1024px) {
                     display: flex;
                 }
 
@@ -127,7 +126,7 @@ header {
                         }
 
                         @media (min-width:1024px) {
-                            padding: 20px 18px;
+                            padding: 20px 15px;
                         }
                         @media (min-width:1200px) {
                             padding: 20px 29px;
@@ -249,7 +248,7 @@ header {
             .right {
                 display: none;
 
-                @media (min-width:1025px) {
+                @media (min-width:1024px) {
                     display: block;
 
                     &.active {
@@ -376,7 +375,7 @@ header {
             }
 
             .toggle_btn {
-                @media (min-width:1025px) {
+                @media (min-width:1024px) {
                     display: none;
                 }
 
